Finished up code.  Need to go back an make better looking mark-up for the exmples